--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,16 @@ cargo-features = ["panic-immediate-abort"]
 resolver = "3"
 members = ["asset", "proto", "proto_derive"]
 
+[workspace.dependencies]
+bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false }
+
 [package]
 name = "craftmine"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = { version = "0.17" }
+bevy = { workspace = true, features = ["2d", "3d", "ui"] }
 
 craftmine_asset = { path = "asset" }
 craftmine_proto = { path = "proto" }
