--- a/asset/Cargo.toml
+++ b/asset/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+thiserror = "2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-bevy_asset = "0.17"
-bevy_reflect = "0.17"
+bevy = { workspace = true }
