--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bevy = { workspace = true }
+
 craftmine_proto_derive = { path = "../proto_derive" }
