--- a/asset/Cargo.toml
+++ b/asset/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 thiserror = "2.0"
 serde = { version = "1.0", features = ["derive"] }
+serde_with = "3.15"
 serde_json = "1.0"
 
 bevy = { workspace = true }
