Some basic rendering

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = { workspace = true, features = ["2d", "3d", "ui"] }
+bevy = { workspace = true, features = ["2d", "3d", "ui", "free_camera"] }
 
 craftmine_asset = { path = "asset" }
 craftmine_proto = { path = "proto" }
